<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:id="@+id/img_photo_movie"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:scaleType="fitXY"/>

    <TextView
        android:id="@+id/tv_name_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_toEndOf="@id/img_photo_movie"
        android:text="@string/movie_title"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_release_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_name_movie"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="12dp"
        android:layout_toRightOf="@id/img_photo_movie"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/release_date" />

    <TextView
        android:id="@+id/tv_description_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_release_movie"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="12dp"
        android:layout_toRightOf="@id/img_photo_movie"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/movie_desc" />

</RelativeLayout>